--- a/src/app/media-details/media-details.component.css
+++ b/src/app/media-details/media-details.component.css
@@ -1,9 +1,20 @@
-#grades-form{
-  display: flex;
-  flex-direction: row;
+#title-image-grades{
+  display : flex;
+  flex-direction : row;
+  margin-top : 0.8rem;
+}
+
+#image-grades{
+  display : flex;
+  flex-direction : column;
+  align-items: center;
+  justify-content : center;
+}
+
+#grades{
+  display : flex;
+  flex-direction: column;
+  justify-content: center;
 
 }
 
-#plus-symbol{
-  margin: 0 auto;
-}
