--- a/src/app/media-details/media-details.component.html
+++ b/src/app/media-details/media-details.component.html
@@ -1,18 +1,24 @@
-<div *ngIf="media">
-  <h2>{{media.name}}</h2>
-  <img src=".\assets\images\{{media.image}}" alt="image_{{media.name}}" width="200" height="300">
-  <form id="grades-form">
-    <div class="form-group" *ngFor="let grade of grades">
-      <svg width="128px" height="128px" viewBox="0 0 128 128" xmlns="http://www.w3.org/2000/svg"
-           aria-hidden="true" role="img" class="iconify iconify--noto" preserveAspectRatio="xMidYMid meet" (click)="selectGrade(grade)">
-        <path id ="{{grade.pathId}}" [attr.d]="grade.shape"
-              fill="#ddeceb"></path>
-      </svg>
-      <svg id="plus-symbol" xmlns="http://www.w3.org/2000/svg" width="50px" height="50px"
-               viewBox="0 0 297 297" (click)="selectGrade(grade,true)">
-        <path id="{{grade.grade + plus.pathId}}" fill="#ddeceb" [attr.d]="plus.shape">
-        </path>
-      </svg>
+<div class="container">
+  <div *ngIf="media">
+    <div class="row" id="title-image-grades">
+      <div class="col" id="image-grades">
+        <h2>{{media.name}}</h2>
+        <img src=".\assets\images\{{media.image}}" alt="image_{{media.name}}" width="500rem" height="700rem">
+      </div>
+      <div class="col" id="grades">
+          <div class="form-group" *ngFor="let grade of grades">
+            <svg width="7rem" height="7rem" viewBox="0 0 128 128" xmlns="http://www.w3.org/2000/svg"
+                 aria-hidden="true" role="img" class="iconify iconify--noto" preserveAspectRatio="xMidYMid meet" (click)="selectGrade(grade)">
+              <path id ="{{grade.pathId}}" [attr.d]="grade.shape"
+                    fill="rgb(236, 246, 243)"></path>
+            </svg>
+            <svg id="plus-symbol" xmlns="http://www.w3.org/2000/svg" width="3rem" height="3rem"
+                     viewBox="0 0 297 297" (click)="selectGrade(grade,true)">
+              <path id="{{grade.grade + plus.pathId}}" fill="rgb(236, 246, 243)" [attr.d]="plus.shape">
+              </path>
+            </svg>
+          </div>
+      </div>
     </div>
-  </form>
+  </div>
 </div>
