--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-top-bar></app-top-bar>
 
-<div class="container">
+<div class="container" id="router" [@routeAnimations]="getRouteAnimationData()">
   <router-outlet></router-outlet>
 </div>
