--- a/src/app/media-details/media-details.component.css
+++ b/src/app/media-details/media-details.component.css
@@ -1,3 +1,4 @@
+
 #title-image-grades{
   display : flex;
   flex-direction : row;
@@ -16,5 +17,9 @@
   flex-direction: column;
   justify-content: center;
 
+}
+
+#description {
+  width: 40rem;
 }
 
