--- a/src/app/movie-list/movie-list.component.html
+++ b/src/app/movie-list/movie-list.component.html
@@ -1,14 +1,21 @@
-<div id="movielist">
-  <h2>Movies</h2>
-
-  <div *ngFor="let movie of movies">
-    <a [title]="movie.name + ' details'" [routerLink]="['/media', movie.type, movie.id]">
-    <img src=".\assets\images\{{movie.image}}" alt="image_{{movie.name}}" width="200" height="300">
-    <h3>
-      {{movie.name}}
-    </h3>
-    </a>
-    <p>description: "{{movie.description}}"</p>
-    <p>IMDb: {{movie.rating}}</p>
-  </div>
+<div class="container-fluid" id="movielist" >
+    <h2>Movies</h2>
+    <div class="row" *ngFor="let movie of movies">
+      <a [title]="movie.name + ' details'" [routerLink]="['/media', movie.type, movie.id]" >
+        <div class="col">
+          <img src=".\assets\images\{{movie.image}}" alt="image_{{movie.name}}" width="200" height="300">
+        </div>
+        <div class="col">
+          <h3>
+            {{movie.name}}
+          </h3>
+        </div>
+      </a>
+      <div class="col">
+        <p>description: "{{movie.description}}"</p>
+        </div>
+      <div class="col">
+        <p>rating: {{movie.rating}}</p>
+      </div>
+    </div>
 </div>
