--- a/src/app/show-list/show-list.component.html
+++ b/src/app/show-list/show-list.component.html
@@ -1,13 +1,21 @@
-<div id="movielist">
+<div class="container-fluid" id="showlist">
   <h2>Shows</h2>
-  <div *ngFor="let show of shows">
+  <div class="row" *ngFor="let show of shows">
     <a [title]="show.name + ' details'" [routerLink]="['/media', show.type, show.id]">
-      <img src=".\assets\images\{{show.image}}" alt="image_{{show.name}}" width="200" height="300">
-      <h3>
-        {{show.name}}
-      </h3>
+      <div class="col">
+        <img src=".\assets\images\{{show.image}}" alt="image_{{show.name}}" width="200" height="300">
+      </div>
+      <div class="col">
+        <h3>
+          {{show.name}}
+        </h3>
+      </div>
     </a>
-    <p>description: "{{show.description}}"</p>
-    <p>IMDb: {{show.rating}}</p>
+    <div class="col">
+      <p>description: "{{show.description}}"</p>
+    </div>
+    <div class="col">
+      <p>IMDb: {{show.rating}}</p>
+    </div>
   </div>
 </div>
