--- a/src/app/show-list/show-list.component.css
+++ b/src/app/show-list/show-list.component.css
@@ -1,6 +1,9 @@
+:host{
+  display: block;
+  width: 100%;
+}
+
 #showlist{
   display: flex;
   flex-direction: column;
-  width: 113rem;
-  align-items: center;
 }
