--- a/src/app/game-list/game-list.component.css
+++ b/src/app/game-list/game-list.component.css
@@ -1,6 +1,8 @@
+:host{
+  display: block;
+  width: 100%;
+}
 #gamelist{
   display: flex;
   flex-direction: column;
-  width: 113rem;
-  align-items: center;
 }
