--- a/src/app/media-details/media-details.component.css
+++ b/src/app/media-details/media-details.component.css
@@ -1,7 +1,17 @@
+:host {
+  display: block;
+  width: 100%;
+}
+
+#media-details {
+  display: flex;
+  justify-content: center;
+}
 
 #title-image-grades{
   display : flex;
   flex-direction : row;
+  width: 100%;
   margin-top : 0.8rem;
 }
 
@@ -23,3 +33,6 @@
   width: 40rem;
 }
 
+#commentInput {
+  width: 100%;
+}
