--- a/src/app/media-details/media-details.component.html
+++ b/src/app/media-details/media-details.component.html
@@ -1,5 +1,5 @@
-<div class="container">
-  <div *ngIf="media" id="media-details">
+<div class="container" id="media-details">
+  <div *ngIf="media" >
     <div class="row" id="title-image-grades">
       <div class="col" id="image-grades">
         <h2>{{media.name}}</h2>
@@ -22,6 +22,14 @@
     </div>
     <div class="row" id="description">
       <p>{{media.description}}</p>
+    </div>
+    <div class="row" id="comments">
+      <div class="col">
+        <h3>Your Thoughts!</h3>
+      </div>
+      <div class="col" id="commentInput">
+          <textarea class="form-control" rows="3"></textarea>
+      </div>
     </div>
   </div>
 </div>
