--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,6 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-
 .container{
   display: flex;
   height: 100%;
@@ -36,8 +35,10 @@ h1 {
 }
 
 h2 {
+  display: flex;
   font-size: 32px;
   margin : 0.4rem;
+  justify-content: center;
 }
 
 
@@ -147,6 +148,10 @@ label {
 
 .nav-item:hover{
   font-size: 1.75rem;
+}
+
+textarea {
+  width: 100%;
 }
 
 .gradient-text {
